Fix: #1877 - Remove invalid value for "align-items"

--- a/themes/_common/css-2.0.0/style.css
+++ b/themes/_common/css-2.0.0/style.css
@@ -633,9 +633,3 @@ fieldset.row > legend, fieldset.row > div {
 	text-align: center;
 	}
 }
-
-@media (max-width: 500px) {
-	.wt-page-options-individual-list, .wt-page-options-family-list, .wt-page-content {
-    align-items: left;
-	}
-}
